# ScreenBridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  SCREENBRIDGE_PRD.md  TESTING_GUIDE.md  pyproject.toml  test_element_detection.py
.claude/agents/: testing-logger.md
screenbridge/: __init__.py  config_template.json  core.py
screenbridge/capture/: __init__.py  manager.py
screenbridge/connectors/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
screenbridge/executor/: __init__.py  action_executor.py
screenbridge/plugins/: __init__.py
screenbridge/processor/: __init__.py  element_tree_builder.py  ocr_engine.py  screen_processor.py
screenbridge/redactor/: __init__.py
screenbridge/security/: __init__.py  security_manager.py
screenbridge/sentinel/: __init__.py  context_detector.py  pii_redactor.py  sentinel_layer.py
screenbridge/summariser/: __init__.py
screenbridge/transport/: __init__.py  llm_bridge.py
