[project]
name = "screenbridge"
version = "0.1.0"
description = "Privacy-first middleware that gives any LLM eyes and hands on your desktop"
authors = [
    {name = "ScreenBridge Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "llm",
    "desktop-automation",
    "screen-capture",
    "mcp",
    "privacy",
    "agentic",
    "accessibility"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Screen capture
    "mss>=9.0.0",
    "pillow>=10.0.0",

    # OCR - Base (Tesseract via pytesseract)
    "pytesseract>=0.3.10",

    # Element detection - macOS
    "atomacos>=3.2.0; sys_platform == 'darwin'",
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",

    # Action execution (constrained by atomacos dependency)
    "pyautogui>=0.9.40,<0.9.42",

    # LLM Connectors
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "google-generativeai>=0.8.0",
    "ollama>=0.4.0",

    # MCP Protocol
    "mcp>=1.1.0",

    # Async support
    "aiofiles>=24.1.0",

    # Config & storage
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
full = [
    # Advanced OCR with deep learning
    "easyocr>=1.7.0",
    "torch>=2.0.0",

    # Element detection with computer vision
    "opencv-python>=4.8.0",
    "onnxruntime>=1.16.0",

    # Additional models
    "transformers>=4.30.0",
]

dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "playwright>=1.40.0",

    # Code quality
    "ruff>=0.7.0",
    "mypy>=1.8.0",
    "black>=24.0.0",

    # Development tools
    "ipython>=8.20.0",
    "uv>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/screenbridge/screenbridge"
Documentation = "https://docs.screenbridge.dev"
Repository = "https://github.com/screenbridge/screenbridge"
Issues = "https://github.com/screenbridge/screenbridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screenbridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=screenbridge",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mss.*",
    "pytesseract.*",
    "easyocr.*",
    "cv2.*",
    "atomacos.*",
    "pyautogui.*",
    "anthropic.*",
    "openai.*",
    "google.generativeai.*",
    "ollama.*",
]
ignore_missing_imports = true
